@@ -20,13 +20,13 @@ public class Stream_ExampleForWebTable {
         List<WebElement> elementsList = driver.findElements(By.xpath("//tr/td[1]"));
 
         // capture text of all webelements into new(original) list
-        List<String> originalList = elementsList.stream().map(s -> s.getText()).collect(Collectors.toList());
+        List<String> originalList = elementsList.stream().map(WebElement::getText).toList();
 
         // sort on the original list of step 3 -> sorted list
-        List<String> sortedList = originalList.stream().sorted().collect(Collectors.toList());
+        List<String> sortedList = originalList.stream().sorted().toList();
 
         // compare original list vs sorted list
-        Assert.assertTrue(originalList.equals(sortedList));
+        Assert.assertEquals(sortedList, originalList);
 
         List<String> price;
 
@@ -35,13 +35,13 @@ public class Stream_ExampleForWebTable {
             List<WebElement> rows = driver.findElements(By.xpath("//tr/td[1]"));
 
             price = rows.stream().filter(s -> s.getText().contains("Rice"))
-                    .map(s -> getPriceVeggie(s)).collect(Collectors.toList());
+                    .map(Stream_ExampleForWebTable::getPriceVeggie).toList();
 
-            price.forEach(a -> System.out.println(a));
-            if (price.size() < 1) {
+            price.forEach(System.out::println);
+            if (price.isEmpty()) {
                 driver.findElement(By.cssSelector("[aria-label='Next']")).click();
             }
-        } while (price.size() < 1);
+        } while (price.isEmpty());
     }
 
     private static String getPriceVeggie(WebElement s) {
